--- a/Amritsar.html
+++ b/Amritsar.html
@@ -91,7 +91,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Golden_Temple_in_Amritsar_03-2016_img3.jpg" alt="Golden Temple">
+      <img src="golden.png" alt="Golden Temple">
       <div class="place-text">
         <h2>Golden Temple</h2>
         <p>The holiest Gurdwara of Sikhism, famous for its stunning architecture, sacred pool, and peaceful ambiance.</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Jallianwala_Bagh_Amritsar.jpg" alt="Jallianwala Bagh">
+      <img src="jallia.png" alt="Jallianwala Bagh">
       <div class="place-text">
         <h2>Jallianwala Bagh</h2>
         <p>A historical site commemorating the tragic massacre of 1919, with memorials and gardens for reflection.</p>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Wagah_Border.jpg" alt="Wagah Border">
+      <img src="wagah.png" alt="Wagah Border">
       <div class="place-text">
         <h2>Wagah Border</h2>
         <p>Famous for the daily flag-lowering ceremony between India and Pakistan, a patriotic and energetic spectacle.</p>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Durgiana_Temple.jpg" alt="Durgiana Temple">
+      <img src="Atemple.png" alt="Durgiana Temple">
       <div class="place-text">
         <h2>Durgiana Temple</h2>
         <p>A beautiful Hindu temple dedicated to Goddess Durga, often compared to the Golden Temple in architecture.</p>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Partition_Museum_Amritsar.jpg" alt="Partition Museum">
+      <img src="" alt="Partition Museum">
       <div class="place-text">
         <h2>Partition Museum</h2>
         <p>A museum dedicated to the memory of the Partition of India in 1947, showcasing stories, artifacts, and history.</p>
