--- a/Banaras.html
+++ b/Banaras.html
@@ -124,7 +124,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="Ramnagar Fort">
+      <img src="fort.png" alt="Ramnagar Fort">
       <div class="place-text">
         <h2>Ramnagar Fort</h2>
         <p>A historic fort on the eastern bank of the Ganges, showcasing royal architecture and a museum of artifacts.</p>
