add changes all

--- a/Amritsar.html
+++ b/Amritsar.html
@@ -123,7 +123,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="Partition Museum">
+      <img src="museum.png" alt="Partition Museum">
       <div class="place-text">
         <h2>Partition Museum</h2>
         <p>A museum dedicated to the memory of the Partition of India in 1947, showcasing stories, artifacts, and history.</p>
