add changes all

--- a/kerala.html
+++ b/kerala.html
@@ -92,7 +92,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/Kovalam_Beach_view.jpg" alt="Kovalam Beach">
+      <img src="kavalam.png" alt="Kovalam Beach">
       <div class="place-text">
         <h2>Kovalam Beach</h2>
         <p>One of Kerala's most famous beaches, known for its crescent-shaped coastline, lighthouses, and water sports.</p>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Varkala_Beach_Cliff_View.jpg" alt="Varkala Beach">
+      <img src="varkala.png" alt="Varkala Beach">
       <div class="place-text">
         <h2>Varkala Beach</h2>
         <p>Famous for its dramatic cliffs, natural springs, and the tranquil Papanasam beach.</p>
@@ -108,7 +108,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Kochi_Chinese_Fishing_Nets.jpg" alt="Fort Kochi">
+      <img src="fortkali.png" alt="Fort Kochi">
       <div class="place-text">
         <h2>Fort Kochi</h2>
         <p>A historic town known for colonial architecture, Chinese fishing nets, and cultural heritage.</p>
@@ -116,7 +116,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Alleppey_Boat.jpg" alt="Alleppey Backwaters">
+      <img src="boat.png" alt="Alleppey Backwaters">
       <div class="place-text">
         <h2>Alleppey Backwaters</h2>
         <p>Famous for houseboat cruises through the serene backwaters, surrounded by lush greenery and coconut palms.</p>
@@ -124,7 +124,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Padmanabhaswamy_Temple.jpg" alt="Padmanabhaswamy Temple">
+      <img src="" alt="Padmanabhaswamy Temple">
       <div class="place-text">
         <h2>Padmanabhaswamy Temple</h2>
         <p>A historic Hindu temple in Thiruvananthapuram, famous for its Dravidian architecture and rich heritage.</p>
