--- a/mumbai.html
+++ b/mumbai.html
@@ -91,7 +91,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/37/Juhu_Beach_Mumbai.jpg" alt="Juhu Beach">
+      <img src="juhu.png" alt="Juhu Beach">
       <div class="place-text">
         <h2>Juhu Beach</h2>
         <p>One of Mumbai’s most popular beaches, bustling with street food stalls, sunset views, and lively crowds.</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Chowpatty_beach_mumbai.JPG" alt="Chowpatty Beach">
+      <img src="chowpatty.png" alt="Chowpatty Beach">
       <div class="place-text">
         <h2>Chowpatty Beach</h2>
         <p>A famous city beach near Marine Drive, known for food stalls, Ganesh Visarjan ceremonies, and evening strolls.</p>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Gateway_of_India_in_Mumbai_1.jpg" alt="Gateway of India">
+      <img src="gateway.png" alt="Gateway of India">
       <div class="place-text">
         <h2>Gateway of India</h2>
         <p>The iconic monument overlooking the Arabian Sea, symbolizing Mumbai’s rich colonial heritage.</p>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Marine_Drive_Night_View.jpg" alt="Marine Drive">
+      <img src="marine.png" alt="Marine Drive">
       <div class="place-text">
         <h2>Marine Drive</h2>
         <p>The scenic promenade along the coastline, famous for sunset views and the “Queen’s Necklace” lights at night.</p>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Sanjay_Gandhi_National_Park.jpg" alt="Sanjay Gandhi National Park">
+      <img src="sanjay.png" alt="Sanjay Gandhi National Park">
       <div class="place-text">
         <h2>Sanjay Gandhi National Park</h2>
         <p>A lush green sanctuary within the city, offering hiking trails, wildlife, and the historic Kanheri Caves.</p>
