--- a/kerala.html
+++ b/kerala.html
@@ -124,7 +124,7 @@
     </div>
 
     <div class="place">
-      <img src="" alt="Padmanabhaswamy Temple">
+      <img src="ptemple.png" alt="Padmanabhaswamy Temple">
       <div class="place-text">
         <h2>Padmanabhaswamy Temple</h2>
         <p>A historic Hindu temple in Thiruvananthapuram, famous for its Dravidian architecture and rich heritage.</p>
