created all mountain places

--- a/dalhousie.html
+++ b/dalhousie.html
@@ -92,7 +92,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Panorama_Dalhousie_Himachal_Pradesh.jpg" alt="Dalhousie View">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/28/01/42/68/primary-as-you-look-into.jpg?w=500&h=400&s=1" alt="Dalhousie View">
       <div class="place-text">
         <h2>Panorama View</h2>
         <p>Breathtaking views of the Dhauladhar ranges and lush pine forests surround Dalhousie.</p>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/St._John%27s_Church_Dalhousie.jpg" alt="St. John's Church">
+      <img src="https://media.istockphoto.com/id/655678660/photo/st-johns-church-dalhousie.jpg?s=170667a&w=0&k=20&c=1F5jlUo2p79SzxcGZ7_FpN9FVckar9nbOXFfgvedIxw=" alt="St. John's Church">
       <div class="place-text">
         <h2>St. John's Church</h2>
         <p>Historic colonial church built during the British era, known for its peaceful ambience.</p>
@@ -108,7 +108,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Panchpula_Dalhousie.jpg" alt="Panchpula">
+      <img src="https://thrilltourism.com/storage/4682/81wZTQMJbcvWTqDx4MV4CQ2f337DVBZjRaWGuFeD.jpg" alt="Panchpula">
       <div class="place-text">
         <h2>Panchpula</h2>
         <p>A famous picnic spot surrounded by scenic landscapes, named after five water springs.</p>
@@ -116,7 +116,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Khajjiar_Valley.jpg" alt="Khajjiar">
+      <img src="https://static2.tripoto.com/media/filter/tst/img/1225867/SpotDocument/1566650755_1566650745743.jpg.webp" alt="Khajjiar">
       <div class="place-text">
         <h2>Khajjiar</h2>
         <p>Often called the "Mini Switzerland of India," this valley offers lush meadows and a peaceful lake.</p>
@@ -124,7 +124,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Dalhousie_Mall_Road.jpg" alt="Mall Road Dalhousie">
+      <img src="https://www.breezewoodwonders.com/images1/dalhusie%20mall%20road.jpeg" alt="Mall Road Dalhousie">
       <div class="place-text">
         <h2>Mall Road</h2>
         <p>The bustling heart of Dalhousie with shops, cafes, and a perfect spot for leisurely strolls.</p>
