--- a/goa.html
+++ b/goa.html
@@ -90,7 +90,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Calangute_Beach_Goa_India.jpg" alt="Calangute Beach">
+      <img src="https://tse2.mm.bing.net/th/id/OIP.N1GFPQZXlB0kRz4NH7QzowHaEK?pid=Api&P=0&h=180" alt="Calangute Beach">
       <div class="place-text">
         <h2>Calangute Beach</h2>
         <p>One of Goa's most popular beaches, known for its lively atmosphere, water sports, and nightlife.</p>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Basilica_of_Bom_Jesus_Goa.jpg" alt="Basilica of Bom Jesus">
+      <img src="church.png" alt="Basilica of Bom Jesus">
       <div class="place-text">
         <h2>Basilica of Bom Jesus</h2>
         <p>A UNESCO World Heritage Site and iconic church holding the mortal remains of St. Francis Xavier.</p>
@@ -106,7 +106,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f7/Anjuna_Beach_Goa.jpg" alt="Anjuna Beach">
+      <img src="https://tse2.mm.bing.net/th/id/OIP.csnTrQbsN_96Ov9-MkLj5wAAAA?pid=Api&P=0&h=180" alt="Anjuna Beach">
       <div class="place-text">
         <h2>Anjuna Beach</h2>
         <p>Famous for its vibrant flea market, stunning sunsets, and relaxed bohemian vibe.</p>
@@ -114,7 +114,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chapora_Fort_Goa.jpg" alt="Chapora Fort">
+      <img src="https://tse3.mm.bing.net/th/id/OIP.A9DCPbzfkkSSgM2QEgWbqAHaE9?pid=Api&P=0&h=180" alt="Chapora Fort">
       <div class="place-text">
         <h2>Chapora Fort</h2>
         <p>Offers panoramic views of the Arabian Sea and the surrounding coastline, perfect for photography and history lovers.</p>
@@ -122,7 +122,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Mangueshi_Temple_Goa.jpg" alt="Shri Mangueshi Temple">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.HeC8GMXpaZyzWOu7D0oWRQHaFY?pid=Api&P=0&h=180" alt="Shri Mangueshi Temple">
       <div class="place-text">
         <h2>Shri Mangueshi Temple</h2>
         <p>A renowned Hindu temple in Goa, famous for its beautiful architecture and peaceful surroundings.</p>
