--- a/chennai.html
+++ b/chennai.html
@@ -91,7 +91,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Marina_Beach_Chennai_India.jpg" alt="Marina Beach">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.tUUdcG52TZSz_c_oHpfbiwHaFj?pid=Api&P=0&h=180" alt="Marina Beach">
       <div class="place-text">
         <h2>Marina Beach</h2>
         <p>One of the longest urban beaches in the world, famous for sunrise views, food stalls, and evening strolls.</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Elliot_Beach_Chennai.jpg" alt="Elliot Beach">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.VJcTSBOwUZpErMRJzezz-QHaEK?pid=Api&P=0&h=180" alt="Elliot Beach">
       <div class="place-text">
         <h2>Elliot Beach</h2>
         <p>A quieter beach in Chennai, ideal for relaxing walks and enjoying a peaceful seaside atmosphere.</p>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Chennai_University_Building.jpg" alt="Kapaleeshwarar Temple">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.Ph06fleDbK5ohZcOCuy_KwHaD4?pid=Api&P=0&h=180" alt="Kapaleeshwarar Temple">
       <div class="place-text">
         <h2>Kapaleeshwarar Temple</h2>
         <p>A historic Hindu temple in Mylapore, dedicated to Lord Shiva and known for its Dravidian architecture.</p>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Arignar_Kaalaignar_Cultural_Centre_02.jpg" alt="Fort St. George">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.JHyBoYnHXnrEHOpCphSjywAAAA?pid=Api&P=0&h=180" alt="Fort St. George">
       <div class="place-text">
         <h2>Fort St. George</h2>
         <p>The first British fortress in India, now housing a museum and offices, reflecting Chennai’s colonial past.</p>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/St_Thomas_Basilica.jpg" alt="St. Thomas Basilica">
+      <img src="https://tse1.mm.bing.net/th/id/OIP.4LW2XBXTeYHqjb9Wfu2WzwHaE_?pid=Api&P=0&h=180" alt="St. Thomas Basilica">
       <div class="place-text">
         <h2>St. Thomas Basilica</h2>
         <p>One of the oldest churches in India, built over the tomb of St. Thomas, an apostle of Jesus Christ.</p>
