--- a/puri.html
+++ b/puri.html
@@ -90,7 +90,7 @@
 
   <section class="places">
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Puri_Beach.jpg" alt="Puri Beach">
+      <img src="https://tse3.mm.bing.net/th/id/OIP.EKBRix7tUhxvoOGkH0nIZAHaEK?pid=Api&P=0&h=180" alt="Puri Beach">
       <div class="place-text">
         <h2>Puri Beach</h2>
         <p>One of India’s most famous beaches, perfect for sunrise views, relaxing walks, and local snacks.</p>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Chandrabhaga_Beach.jpg" alt="Chandrabhaga Beach">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.qQ7ABFShtBTWtAr1yEfN_QHaEM?pid=Api&P=0&h=180" alt="Chandrabhaga Beach">
       <div class="place-text">
         <h2>Chandrabhaga Beach</h2>
         <p>A serene beach near Puri, ideal for sunbathing, long strolls, and peaceful surroundings.</p>
@@ -106,7 +106,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Jagannath_Temple_Puri.JPG" alt="Jagannath Temple">
+      <img src="https://tse4.mm.bing.net/th/id/OIP.1rC_uPwwl-tA9owbkHhV2QHaE8?pid=Api&P=0&h=180" alt="Jagannath Temple">
       <div class="place-text">
         <h2>Jagannath Temple</h2>
         <p>A sacred Hindu temple dedicated to Lord Jagannath, attracting thousands of pilgrims every year.</p>
@@ -114,7 +114,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/63/Rath_Yatra_Puri.JPG" alt="Rath Yatra">
+      <img src="https://tse1.mm.bing.net/th/id/OIP.IO7xnP93Vtdmhtg747WXiQHaE8?pid=Api&P=0&h=180" alt="Rath Yatra">
       <div class="place-text">
         <h2>Rath Yatra Festival</h2>
         <p>The famous annual chariot festival, a spectacular cultural event drawing devotees and tourists alike.</p>
@@ -122,7 +122,7 @@
     </div>
 
     <div class="place">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Konark_Sun_Temple.JPG" alt="Konark Sun Temple">
+      <img src="https://tse1.mm.bing.net/th/id/OIP.kJNug6p1S2yIyIak2Lp4gwHaFj?pid=Api&P=0&h=180" alt="Konark Sun Temple">
       <div class="place-text">
         <h2>Konark Sun Temple</h2>
         <p>A UNESCO World Heritage Site near Puri, known for its intricate stone carvings and chariot-shaped architecture.</p>
