--- a/snowy.html
+++ b/snowy.html
@@ -20,6 +20,7 @@
     *{box-sizing:border-box}
     body{
       margin:0;
+      background-color: url("background.png");
       font-family: 'Montserrat', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
       background: var(--bg);
       -webkit-font-smoothing:antialiased;
@@ -211,8 +212,11 @@
       .card{min-height:150px;padding:20px}
     }
   </style>
+
 </head>
 <body>
+
+
   <div class="wrap">
     <h1>Best choices for Sunny Shores Retreat</h1>
     <div class="subtitle">Click any destination for more info — perfect picks for a refreshing getaway.</div>
