--- a/pilgrimage.html
+++ b/pilgrimage.html
@@ -7,8 +7,8 @@
   <title>Must-Visit Pilgrimage Destinations</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --bg: linear-gradient(135deg, #e0f7fa, #e1bee7);
+   :root{
+      --bg: url('suggested bg.png') no-repeat center center fixed;
       --glass: rgba(255,255,255,0.55);
       --glass-2: rgba(255,255,255,0.25);
       --accent: #5aa4ff;
@@ -21,6 +21,8 @@
       margin:0;
       font-family: 'Montserrat', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
       background: var(--bg);
+      background-size: cover;
+      background-attachment: fixed;
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
       color:#0f172a;
@@ -30,6 +32,7 @@
       align-items:flex-start;
       justify-content:center;
     }
+
 
     .wrap{
       width:100%;
@@ -47,7 +50,7 @@
 
     .subtitle{
       text-align:center;
-      color:var(--muted);
+      color: #fff;
       margin-bottom:32px;
       font-size:16px;
     }
@@ -111,7 +114,7 @@
 
     .place-desc{
       font-size:15px;
-      color:var(--muted);
+      color: #fff;
       margin:0 0 14px 0;
       line-height:1.45;
     }
