--- a/snowy.html
+++ b/snowy.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg: linear-gradient(135deg, #e0f7fa, #e1bee7);
+      --bg: url('suggested bg.png') no-repeat center center fixed;
       --glass: rgba(255,255,255,0.55);
       --glass-2: rgba(255,255,255,0.25);
       --accent: #5aa4ff;
@@ -22,6 +20,8 @@
       margin:0;
       font-family: 'Montserrat', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
       background: var(--bg);
+      background-size: cover;
+      background-attachment: fixed;
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
       color:#0f172a;
@@ -48,7 +48,8 @@
 
     .subtitle{
       text-align:center;
-      color:var(--muted);
+      /* color:var(--muted); */
+      color: white;
       margin-bottom:32px;
       font-size:16px;
     }
@@ -112,7 +113,7 @@
 
     .place-desc{
       font-size:15px;
-      color:var(--muted);
+      color:#fff;
       margin:0 0 14px 0;
       line-height:1.45;
     }
@@ -265,7 +266,6 @@
   }
 ];
 
-//   const pages = ['dalhousie.html', 'Manali.html', 'Shim.html', 'Mussorie.html', 'kashmir.html' , 'Rishekesh.html'];
 const pages = [
   'dalhousie.html',  // Dalhousie
   'Manali.html',     // Manali
@@ -274,7 +274,6 @@ const pages = [
   'kashmir.html',    // Kashmir
   'Rishekesh.html'   // Rishikesh
 ];
-
 
   const grid = document.getElementById('grid');
   
@@ -319,4 +318,3 @@ const pages = [
 </script>
 
 </body>
-</html>
